# carla-mcp-server

./: .env.example  .mcp.json.example  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MIXASSIST_SETUP.md  README.md  TODO  analyze_mixassist.py  base_tools.py  carla_controller.py  config_loader.py  launch_carla_mcp.sh  main.py  mixassist_resources.py  mixassist_schema.py  pyproject.toml  requirements-backend-only.txt  requirements.txt  server.py  setup_mixassist.py  shell.nix  start_server.sh  tool_registry.py  types.py
config/: config.yaml
monitors/: ambient_stream.py  audio_monitor.py  cpu_monitor.py  event_monitor.py
tests/: test_complete_suite.py  test_mixassist_integration.py  test_server.py
tools/: analysis_tools.py  hardware_tools.py  jack_tools.py  parameter_tools.py  plugin_tools.py  routing_tools.py  session_tools.py
utils/: __init__.py  async_helpers.py
